--- a/src/pages/E404/E404.module.css
+++ b/src/pages/E404/E404.module.css
@@ -7,12 +7,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* background-color: rgba(0, 0,0, 0.9);*/
     color: rgb(79, 223, 86);
 }
 
 .numeroerror {
-    
+    text-align: left;
     font-size: 300px;
     font-weight: 200;
     margin: 1px;
