--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -1,10 +1,11 @@
-.imgFondo{
+.imgFondo {
     width: 100%;
     height: 70vh;
     opacity: .7;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    position: relative;
 }
 
 .grardiente {
@@ -15,4 +16,31 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.titulo_descripcion_y_video {
+    padding: 10px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content:space-around;
+    align-items: center;
+
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 300px;
+}
+
+.titulo_descripcion{
+    width: 45%;
+    display: flex;
+    flex-direction: column;    
+}
+
+.descripcion{
+    padding: 20px;
+    color: white;
+    font-size: 18px;
 }
