--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -1,29 +1,29 @@
 .imgFondo {
-    width: 100%;
+    position: relative;
+    left: -27px;
+    width: 104%;
     height: 70vh;
     opacity: .7;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    position: relative;
 }
 
 .grardiente {
     width: 100%;
     height: 70vh;
     background: linear-gradient(var(--bkSecundario_darkblue), var(--Principal_blue));
-    opacity: 0.56;
+    opacity: 0.7;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .titulo_descripcion_y_video {
-    padding: 10px;
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content:space-around;
+    justify-content: space-around;
     align-items: center;
 
     position: absolute;
@@ -33,14 +33,22 @@
     right: 300px;
 }
 
-.titulo_descripcion{
-    width: 45%;
+.titulo_descripcion {
+    padding: 0 10px;
+    width: 50%;
+    height: 340px;
     display: flex;
-    flex-direction: column;    
+    flex-direction: column;
+
+    color: white;
 }
 
-.descripcion{
-    padding: 20px;
-    color: white;
+.tituloDescripcion {
+    margin-top: 30px;
+    font-size: 42px;
+}
+
+.textoDescripcion {
+    margin-top: 15px;
     font-size: 18px;
 }
