formulario nuevovideo listo

--- a/src/components/CategoriasYVideos/Categorias/Categorias.module.css
+++ b/src/components/CategoriasYVideos/Categorias/Categorias.module.css
@@ -1,12 +1,27 @@
-.container{
-display: flex;
-flex-direction: column;
+.container {
+    display: flex;
+    flex-direction: column;
 }
 
-.tarjetas{
+.tarjetas {
     display: flex;
     width: 1340px;
-    margin: 15px 0 15px;
-    overflow: hidden;
- 
+    margin: 0px 0 35px;
+    overflow: auto;
+    padding-bottom: 15px;
+}
+
+.tarjetas::-webkit-scrollbar {
+
+    height: 15px;
+    background: rgba(34, 113, 209, 17%);
+    border-radius: 30px;
+
+}
+
+.tarjetas::-webkit-scrollbar-thumb {
+    background: linear-gradient(90deg , #2271D1 , #113A6B 56%);
+;
+    border-radius: 30px;
+
 }
