--- a/src/components/TarjetaVideo/TarjetaVideo.module.css
+++ b/src/components/TarjetaVideo/TarjetaVideo.module.css
@@ -1,6 +1,5 @@
 .container_video {
     position: relative;
-    overflow: hidden;
     width: 430px;
     height: 319px;
     background-color: rgb(0, 0, 0);
@@ -9,7 +8,7 @@
 }
 
 .video {
-    width: 425px;
+    width: 427px;
     height: 240px;
     border-radius: 15px 15px 0PX 0PX;
 }
@@ -28,3 +27,15 @@
     border-width: 3px;
 }
 
+.container_botones {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    background: transparent;
+    width: 95%;
+    height: 20%;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    font-weight: bolder;
+    font-size: 16px;
+}
