--- a/src/components/TituloCategoria/TituloCategoria.module.css
+++ b/src/components/TituloCategoria/TituloCategoria.module.css
@@ -6,7 +6,7 @@
     width: 432px;
     height: 70px;
     border-radius: 15px;
-    box-shadow: 1px 2px 4px 0 rgb(0, 0, 0);
+    box-shadow: 1px 2px 4px 0 var(--Realblack);
 }
 .titulo_categoria{    
     font-size: 32px;
